--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -2,17 +2,20 @@
   "item.forged_reactor.mk_1_iron_armor_leggings": "Prototype Iron Armor Leggings",
   "item_group.forged_reactor.iron_armor_tab": "Iron Armor",
   "item.forged_reactor.mk_3_iron_armor_boots": "Iron Armor Boots",
-  "item.forged_reactor.mk_2_iron_armor_chestplate": "Prototype Flight Iron Armor Chestplate",
+  "item.forged_reactor.mk_2_iron_armor_chestplate": "Prototype Accurate Flight Iron Armor Chestplate",
   "item.forged_reactor.mk_3_iron_armor_helmet": "Iron Armor Helmet",
   "key.categories.ironarmor": "Iron Armor",
-  "item.forged_reactor.mk_2_iron_armor_boots": "Prototype Flight Iron Armor Boots",
+  "key.forged_reactor.attack_3": "Attack 3",
+  "key.forged_reactor.attack_2": "Attack 2",
+  "item.forged_reactor.mk_2_iron_armor_boots": "Prototype Accurate Flight Iron Armor Boots",
   "key.forged_reactor.attack_1": "Attack 1",
-  "item.forged_reactor.mk_2_iron_armor_helmet": "Prototype Flight Iron Armor Helmet",
+  "item.forged_reactor.mk_2_iron_armor_helmet": "Prototype Accurate Flight Iron Armor Helmet",
+  "key.forged_reactor.attack_4": "Attack 4",
   "item.forged_reactor.mk_1_iron_armor_helmet": "Prototype Iron Armor Helmet",
   "item.forged_reactor.mk_3_iron_armor_leggings": "Iron Armor Leggings",
   "item.forged_reactor.mk_1_iron_armor_chestplate": "Prototype Iron Armor Chestplate",
   "effect.forged_reactor.armor_weight": "Armor Weight",
   "item.forged_reactor.mk_3_iron_armor_chestplate": "Iron Armor Chestplate",
   "item.forged_reactor.mk_1_iron_armor_boots": "Prototype Iron Armor Boots",
-  "item.forged_reactor.mk_2_iron_armor_leggings": "Prototype Flight Iron Armor Leggings"
+  "item.forged_reactor.mk_2_iron_armor_leggings": "Prototype Accurate Flight Iron Armor Leggings"
 }
