Made Jarvis & Iron Armor HUD support with tag compatability!!! (custom addons (:< )

--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -22,5 +22,6 @@
   "item.forged_reactor.mk_3_iron_armor_leggings": "Iron Armor Leggings",
   "effect.forged_reactor.armor_weight": "Armor Weight",
   "item.forged_reactor.mk_3_iron_armor_chestplate": "Iron Armor Chestplate",
-  "item.forged_reactor.mk_1_iron_armor_boots": "Prototype Iron Armor Boots"
+  "item.forged_reactor.mk_1_iron_armor_boots": "Prototype Iron Armor Boots",
+  "item.forged_reactor.mk_1_iron_armor_helmet_open_helmet": "Prototype Iron Armor Helmet"
 }
