--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -1,13 +1,17 @@
 {
   "item.forged_reactor.mk_1_iron_armor_leggings": "Prototype Iron Armor Leggings",
+  "item.forged_reactor.mk_4_iron_armor_leggings": "Iron Armor Leggings",
   "block.forged_reactor.armor_configurator": "Armor Modification Configurator",
+  "item.forged_reactor.mk_4_iron_armor_chestplate": "Iron Armor Chestplate",
   "item.forged_reactor.mk_2_iron_armor_helmet": "Prototype Accurate Flight Iron Armor Helmet",
   "subtitles.ironman.flighttestarmor.spark_1": "Sparks",
   "item.forged_reactor.mk_1_iron_armor_helmet": "Prototype Iron Armor Helmet",
   "item.forged_reactor.flight_test_armor_chestplate": "Flight Test Prototype Chestplate",
+  "item.forged_reactor.mk_4_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_1_iron_armor_chestplate": "Prototype Iron Armor Chestplate",
   "item.forged_reactor.mk_2_iron_armor_leggings": "Prototype Accurate Flight Iron Armor Leggings",
   "item.forged_reactor.flight_test_armor_boots": "Flight Test Prototype Boots",
+  "item.forged_reactor.mk_4_iron_armor_helmet": "Iron Armor Helmet",
   "subtitles.flighttest_armor_spark": "Sparks",
   "item_group.forged_reactor.iron_armor_tab": "Iron Armor",
   "item.forged_reactor.mk_3_iron_armor_boots": "Iron Armor Boots",
