--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -1,10 +1,12 @@
 {
   "item.forged_reactor.mk_1_iron_armor_leggings": "Prototype Iron Armor Leggings",
+  "item.forged_reactor.mk_5_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_4_iron_armor_leggings": "Iron Armor Leggings",
-  "block.forged_reactor.armor_configurator": "Armor Modification Configurator",
   "item.forged_reactor.mk_4_iron_armor_chestplate": "Iron Armor Chestplate",
+  "block.forged_reactor.armor_configurator": "Armor Modification Configurator",
   "item.forged_reactor.mk_2_iron_armor_helmet": "Prototype Accurate Flight Iron Armor Helmet",
   "subtitles.ironman.flighttestarmor.spark_1": "Sparks",
+  "item.forged_reactor.mk_5_iron_armor_helmet": "Iron Armor Helmet",
   "item.forged_reactor.mk_1_iron_armor_helmet": "Prototype Iron Armor Helmet",
   "item.forged_reactor.flight_test_armor_chestplate": "Flight Test Prototype Chestplate",
   "item.forged_reactor.mk_4_iron_armor_boots": "Iron Armor Boots",
@@ -13,6 +15,7 @@
   "item.forged_reactor.flight_test_armor_boots": "Flight Test Prototype Boots",
   "item.forged_reactor.mk_4_iron_armor_helmet": "Iron Armor Helmet",
   "subtitles.flighttest_armor_spark": "Sparks",
+  "item.forged_reactor.mk_5_iron_armor_chestplate": "Iron Armor Chestplate",
   "item_group.forged_reactor.iron_armor_tab": "Iron Armor",
   "item.forged_reactor.mk_3_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_2_iron_armor_chestplate": "Prototype Accurate Flight Iron Armor Chestplate",
@@ -22,10 +25,12 @@
   "key.forged_reactor.attack_2": "Attack 2",
   "item.forged_reactor.mk_2_iron_armor_boots": "Prototype Accurate Flight Iron Armor Boots",
   "key.forged_reactor.attack_1": "Attack 1",
+  "item.forged_reactor.mk_5_iron_armor_leggings": "Iron Armor Leggings",
   "key.forged_reactor.attack_4": "Attack 4",
   "item.forged_reactor.mk_3_iron_armor_leggings": "Iron Armor Leggings",
   "effect.forged_reactor.armor_weight": "Armor Weight",
   "item.forged_reactor.mk_3_iron_armor_chestplate": "Iron Armor Chestplate",
   "item.forged_reactor.mk_1_iron_armor_boots": "Prototype Iron Armor Boots",
-  "item.forged_reactor.mk_1_iron_armor_helmet_open_helmet": "Prototype Iron Armor Helmet"
+  "item.forged_reactor.mk_1_iron_armor_helmet_open_helmet": "Prototype Iron Armor Helmet",
+  "item.forged_reactor.mk_5_suitcase": "Iron Armor Suitcase"
 }
