Added Mk. 6 & Mk. 5 Effects

--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -1,9 +1,11 @@
 {
   "item.forged_reactor.mk_1_iron_armor_leggings": "Prototype Iron Armor Leggings",
+  "item.forged_reactor.upgrade_template": "Upgrade Template",
   "item.forged_reactor.mk_5_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_4_iron_armor_leggings": "Iron Armor Leggings",
   "item.forged_reactor.mk_4_iron_armor_chestplate": "Iron Armor Chestplate",
   "block.forged_reactor.armor_configurator": "Armor Modification Configurator",
+  "item.forged_reactor.mk_6_iron_armor_leggings": "Iron Armor Leggings",
   "item.forged_reactor.mk_2_iron_armor_helmet": "Prototype Accurate Flight Iron Armor Helmet",
   "subtitles.ironman.flighttestarmor.spark_1": "Sparks",
   "item.forged_reactor.mk_5_iron_armor_helmet": "Iron Armor Helmet",
@@ -20,8 +22,10 @@
   "item.forged_reactor.mk_3_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_2_iron_armor_chestplate": "Prototype Accurate Flight Iron Armor Chestplate",
   "item.forged_reactor.mk_3_iron_armor_helmet": "Iron Armor Helmet",
+  "item.forged_reactor.mk_6_iron_armor_helmet": "Iron Armor Helmet",
   "key.categories.ironarmor": "Iron Armor",
   "key.forged_reactor.attack_3": "Attack 3",
+  "item.forged_reactor.mk_6_iron_armor_chestplate": "Iron Armor Chestplate",
   "key.forged_reactor.attack_2": "Attack 2",
   "item.forged_reactor.mk_2_iron_armor_boots": "Prototype Accurate Flight Iron Armor Boots",
   "key.forged_reactor.attack_1": "Attack 1",
@@ -29,6 +33,7 @@
   "key.forged_reactor.attack_4": "Attack 4",
   "item.forged_reactor.mk_3_iron_armor_leggings": "Iron Armor Leggings",
   "effect.forged_reactor.armor_weight": "Armor Weight",
+  "item.forged_reactor.mk_6_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_3_iron_armor_chestplate": "Iron Armor Chestplate",
   "item.forged_reactor.mk_1_iron_armor_boots": "Prototype Iron Armor Boots",
   "item.forged_reactor.mk_1_iron_armor_helmet_open_helmet": "Prototype Iron Armor Helmet",
