Added Armor Upgrading

--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -1,9 +1,10 @@
 {
-  "item.forged_reactor.mk_5_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_9_iron_armor_leggings": "Iron Armor Leggings",
+  "item.forged_reactor.mk_5_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_4_iron_armor_leggings": "Iron Armor Leggings",
   "block.forged_reactor.armor_configurator": "Armor Modification Configurator",
   "item.forged_reactor.mk_9_iron_armor_chestplate": "Iron Armor Chestplate",
+  "entity.forged_reactor.mk_7_suit_pod": "Mk. 7 Suit Pod",
   "item.forged_reactor.mk_5_iron_armor_helmet": "Iron Armor Helmet",
   "item.forged_reactor.mk_4_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_1_iron_armor_chestplate": "Prototype Iron Armor Chestplate",
@@ -12,11 +13,11 @@
   "subtitles.flighttest_armor_spark": "Sparks",
   "item_group.forged_reactor.iron_armor_tab": "Iron Armor",
   "item.forged_reactor.mk_8_iron_armor_boots": "Iron Armor Boots",
-  "item.forged_reactor.mk_2_iron_armor_chestplate": "Prototype Accurate Flight Iron Armor Chestplate",
   "item.forged_reactor.mk_6_iron_armor_helmet": "Iron Armor Helmet",
+  "item.forged_reactor.mk_2_iron_armor_chestplate": "Prototype Accurate Flight Iron Armor Chestplate",
   "key.categories.ironarmor": "Iron Armor",
-  "key.forged_reactor.attack_3": "Attack 3",
   "item.forged_reactor.mk_7_iron_armor_boots": "Iron Armor Boots",
+  "key.forged_reactor.attack_3": "Attack 3",
   "key.forged_reactor.attack_2": "Attack 2",
   "item.forged_reactor.mk_2_iron_armor_boots": "Prototype Accurate Flight Iron Armor Boots",
   "key.forged_reactor.attack_1": "Attack 1",
@@ -28,6 +29,7 @@
   "item.forged_reactor.mk_5_suitcase": "Iron Armor Suitcase",
   "item.forged_reactor.mk_1_iron_armor_leggings": "Prototype Iron Armor Leggings",
   "item.forged_reactor.upgrade_template": "Upgrade Template",
+  "item.forged_reactor.mk_7_suit_pod_spawn_egg": "Mk. 7 Suit Pod Spawn Egg",
   "item.forged_reactor.mk_4_iron_armor_chestplate": "Iron Armor Chestplate",
   "item.forged_reactor.mk_6_iron_armor_leggings": "Iron Armor Leggings",
   "item.forged_reactor.mk_2_iron_armor_helmet": "Prototype Accurate Flight Iron Armor Helmet",
