--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -29,6 +29,7 @@
   "item.forged_reactor.mk_5_suitcase": "Iron Armor Suitcase",
   "item.forged_reactor.mk_1_iron_armor_leggings": "Prototype Iron Armor Leggings",
   "item.forged_reactor.upgrade_template": "Upgrade Template",
+  "block.forged_reactor.armor_intake_block": "Armor Intake",
   "item.forged_reactor.mk_7_suit_pod_spawn_egg": "Mk. 7 Suit Pod Spawn Egg",
   "item.forged_reactor.mk_4_iron_armor_chestplate": "Iron Armor Chestplate",
   "item.forged_reactor.mk_6_iron_armor_leggings": "Iron Armor Leggings",
@@ -41,6 +42,7 @@
   "item.forged_reactor.mk_7_iron_armor_helmet": "Iron Armor Helmet",
   "item.forged_reactor.mk_2_iron_armor_leggings": "Prototype Accurate Flight Iron Armor Leggings",
   "item.forged_reactor.mk_5_iron_armor_chestplate": "Iron Armor Chestplate",
+  "gui.forged_reactor.armor_intake_gui.label_armor_intake": "Armor Intake",
   "item.forged_reactor.mk_3_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_3_iron_armor_helmet": "Iron Armor Helmet",
   "item.forged_reactor.mk_6_iron_armor_chestplate": "Iron Armor Chestplate",
