The HUD now displays speed (thx duzo)

--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -47,6 +47,7 @@
   "item.forged_reactor.mk_3_iron_armor_helmet": "Iron Armor Helmet",
   "item.forged_reactor.mk_6_iron_armor_chestplate": "Iron Armor Chestplate",
   "item.forged_reactor.mk_5_iron_armor_leggings": "Iron Armor Leggings",
+  "gui.forged_reactor.mk_2_armor_hud.label_proc_speed_return": "speed",
   "item.forged_reactor.mk_9_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_6_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_8_iron_armor_chestplate": "Iron Armor Chestplate",
