--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -13,23 +13,23 @@
   "subtitles.flighttest_armor_spark": "Sparks",
   "item_group.forged_reactor.iron_armor_tab": "Iron Armor",
   "item.forged_reactor.mk_8_iron_armor_boots": "Iron Armor Boots",
-  "item.forged_reactor.mk_2_iron_armor_chestplate": "Prototype Accurate Flight Iron Armor Chestplate",
   "item.forged_reactor.mk_6_iron_armor_helmet": "Iron Armor Helmet",
+  "item.forged_reactor.mk_2_iron_armor_chestplate": "Prototype Accurate Flight Iron Armor Chestplate",
   "key.categories.ironarmor": "Iron Armor",
-  "key.forged_reactor.attack_3": "Attack 3",
   "item.forged_reactor.mk_7_iron_armor_boots": "Iron Armor Boots",
+  "key.forged_reactor.attack_3": "Attack 3",
   "key.forged_reactor.attack_2": "Attack 2",
   "item.forged_reactor.mk_2_iron_armor_boots": "Prototype Accurate Flight Iron Armor Boots",
   "key.forged_reactor.attack_1": "Attack 1",
   "key.forged_reactor.attack_4": "Attack 4",
   "item.forged_reactor.mk_3_iron_armor_leggings": "Iron Armor Leggings",
+  "block.forged_reactor.armor_withdrawer": "Armor Withdrawer",
   "effect.forged_reactor.armor_weight": "Armor Weight",
   "item.forged_reactor.mk_3_iron_armor_chestplate": "Iron Armor Chestplate",
   "item.forged_reactor.mk_8_iron_armor_leggings": "Iron Armor Leggings",
   "item.forged_reactor.mk_5_suitcase": "Iron Armor Suitcase",
   "item.forged_reactor.mk_1_iron_armor_leggings": "Prototype Iron Armor Leggings",
   "item.forged_reactor.upgrade_template": "Upgrade Template",
-  "block.forged_reactor.armor_intake_block": "Armor Intake",
   "item.forged_reactor.mk_7_suit_pod_spawn_egg": "Mk. 7 Suit Pod Spawn Egg",
   "item.forged_reactor.mk_4_iron_armor_chestplate": "Iron Armor Chestplate",
   "item.forged_reactor.mk_6_iron_armor_leggings": "Iron Armor Leggings",
@@ -42,7 +42,7 @@
   "item.forged_reactor.mk_7_iron_armor_helmet": "Iron Armor Helmet",
   "item.forged_reactor.mk_2_iron_armor_leggings": "Prototype Accurate Flight Iron Armor Leggings",
   "item.forged_reactor.mk_5_iron_armor_chestplate": "Iron Armor Chestplate",
-  "gui.forged_reactor.armor_intake_gui.label_armor_intake": "Armor Intake",
+  "gui.forged_reactor.armor_intake_gui.label_armor_intake": "Armor Withdrawer",
   "item.forged_reactor.mk_3_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_3_iron_armor_helmet": "Iron Armor Helmet",
   "gui.forged_reactor.mk_2_armor_hud.label_entity_data": "Entity Data:",
