--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -10,6 +10,7 @@
   "item.forged_reactor.mk_1_iron_armor_chestplate": "Prototype Iron Armor Chestplate",
   "item.forged_reactor.flight_test_armor_boots": "Flight Test Prototype Boots",
   "item.forged_reactor.mk_4_iron_armor_helmet": "Iron Armor Helmet",
+  "death.attack.repulsor_damage.item": "%1$s was killed by %2$s from a Repulsor Beam",
   "subtitles.flighttest_armor_spark": "Sparks",
   "item_group.forged_reactor.iron_armor_tab": "Iron Armor",
   "item.forged_reactor.mk_8_iron_armor_boots": "Iron Armor Boots",
@@ -41,12 +42,14 @@
   "item.forged_reactor.mk_7_iron_armor_leggings": "Iron Armor Leggings",
   "item.forged_reactor.mk_7_iron_armor_helmet": "Iron Armor Helmet",
   "item.forged_reactor.mk_2_iron_armor_leggings": "Prototype Accurate Flight Iron Armor Leggings",
+  "death.attack.repulsor_damage.player": "%1$s died from a Repulsor Beam whilst trying to escape %2$s",
   "item.forged_reactor.mk_5_iron_armor_chestplate": "Iron Armor Chestplate",
   "gui.forged_reactor.armor_intake_gui.label_armor_intake": "Armor Withdrawer",
   "item.forged_reactor.mk_3_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_3_iron_armor_helmet": "Iron Armor Helmet",
   "gui.forged_reactor.mk_2_armor_hud.label_entity_data": "Entity Data:",
   "item.forged_reactor.mk_6_iron_armor_chestplate": "Iron Armor Chestplate",
+  "death.attack.repulsor_damage": "%1$s died from a Repulsor Beam",
   "item.forged_reactor.mk_5_iron_armor_leggings": "Iron Armor Leggings",
   "gui.forged_reactor.mk_2_armor_hud.label_proc_speed_return": "speed",
   "item.forged_reactor.mk_9_iron_armor_boots": "Iron Armor Boots",
