--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -36,6 +36,7 @@
   "item.forged_reactor.mk_6_iron_armor_leggings": "Iron Armor Leggings",
   "item.forged_reactor.mk_2_iron_armor_helmet": "Prototype Accurate Flight Iron Armor Helmet",
   "subtitles.ironman.flighttestarmor.spark_1": "Sparks",
+  "item.forged_reactor.battery": "Battery",
   "item.forged_reactor.mk_8_iron_armor_helmet": "Iron Armor Helmet",
   "item.forged_reactor.mk_1_iron_armor_helmet": "Prototype Iron Armor Helmet",
   "item.forged_reactor.flight_test_armor_chestplate": "Flight Test Prototype Chestplate",
