--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -13,6 +13,7 @@
   "item.forged_reactor.flight_test_armor_boots": "Flight Test Prototype Boots",
   "death.attack.repulsor_damage.item": "%1$s was electrocuted by %2$s from a Repulsor Beam",
   "subtitles.flighttest_armor_spark": "Sparks",
+  "effect.forged_reactor.chlorophyll_effect": "Chlorophyllin",
   "item_group.forged_reactor.iron_armor_tab": "Iron Armor",
   "item.forged_reactor.mk_8_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_6_iron_armor_helmet": "Iron Armor Helmet",
@@ -23,6 +24,7 @@
   "key.forged_reactor.attack_2": "Attack 2",
   "item.forged_reactor.mk_2_iron_armor_boots": "Prototype Accurate Flight Iron Armor Boots",
   "key.forged_reactor.attack_1": "Attack 1",
+  "item.forged_reactor.hammer": "Hammer",
   "key.forged_reactor.attack_4": "Attack 4",
   "item.forged_reactor.mk_3_iron_armor_leggings": "Iron Armor Leggings",
   "block.forged_reactor.armor_withdrawer": "Armor Withdrawer",
@@ -32,6 +34,8 @@
   "item.forged_reactor.mk_5_suitcase": "Iron Armor Suitcase",
   "item.forged_reactor.mk_1_iron_armor_leggings": "Prototype Iron Armor Leggings",
   "item.forged_reactor.upgrade_template": "Upgrade Template",
+  "item.forged_reactor.molten_iron_2": "Molten Iron",
+  "item.forged_reactor.molten_iron_1": "Molten Iron",
   "item.forged_reactor.mk_7_suit_pod_spawn_egg": "Mk. 7 Suit Pod Spawn Egg",
   "item.minecraft.splash_potion.effect.chlorophyll": "Splash Potion of Chlorophyll",
   "item.forged_reactor.mk_4_iron_armor_chestplate": "Iron Armor Chestplate",
@@ -57,6 +61,7 @@
   "item.forged_reactor.mk_5_iron_armor_leggings": "Iron Armor Leggings",
   "gui.forged_reactor.mk_2_armor_hud.label_proc_speed_return": "speed",
   "item.forged_reactor.mk_9_iron_armor_boots": "Iron Armor Boots",
+  "item.forged_reactor.molten_iron": "Molten Iron",
   "item.minecraft.tipped_arrow.effect.chlorophyll": "Arrow of Chlorophyll",
   "item.forged_reactor.mk_6_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_8_iron_armor_chestplate": "Iron Armor Chestplate",
