--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -19,6 +19,7 @@
   "item.forged_reactor.mk_6_iron_armor_helmet": "Iron Armor Helmet",
   "item.forged_reactor.mk_2_iron_armor_chestplate": "Prototype Accurate Flight Iron Armor Chestplate",
   "key.categories.ironarmor": "Iron Armor",
+  "item.forged_reactor.arc_reactor": "Arc Reactor",
   "item.forged_reactor.mk_7_iron_armor_boots": "Iron Armor Boots",
   "key.forged_reactor.attack_3": "Attack 3",
   "key.forged_reactor.attack_2": "Attack 2",
