Added Palladium Poisoning and Chlorophyll now has a effect to temperarily pause it till it runs out

--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -4,8 +4,8 @@
   "item.forged_reactor.mk_5_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_4_iron_armor_leggings": "Iron Armor Leggings",
   "block.forged_reactor.armor_configurator": "Armor Modification Configurator",
-  "item.forged_reactor.mk_9_iron_armor_chestplate": "Iron Armor Chestplate",
   "entity.forged_reactor.mk_7_suit_pod": "Mk. 7 Suit Pod",
+  "item.forged_reactor.mk_9_iron_armor_chestplate": "Iron Armor Chestplate",
   "item.forged_reactor.mk_5_iron_armor_helmet": "Iron Armor Helmet",
   "item.forged_reactor.mk_4_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_1_iron_armor_chestplate": "Prototype Iron Armor Chestplate",
@@ -29,6 +29,7 @@
   "key.forged_reactor.attack_4": "Attack 4",
   "item.forged_reactor.mk_3_iron_armor_leggings": "Iron Armor Leggings",
   "block.forged_reactor.armor_withdrawer": "Armor Withdrawer",
+  "effect.forged_reactor.palladium_poisoning": "Palladium Poisoning",
   "effect.forged_reactor.armor_weight": "Armor Weight",
   "item.forged_reactor.mk_3_iron_armor_chestplate": "Iron Armor Chestplate",
   "item.forged_reactor.mk_8_iron_armor_leggings": "Iron Armor Leggings",
