Improved Flight Display

--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -30,10 +30,12 @@
   "item.forged_reactor.mk_3_iron_armor_leggings": "Iron Armor Leggings",
   "block.forged_reactor.armor_withdrawer": "Armor Withdrawer",
   "effect.forged_reactor.palladium_poisoning": "Palladium Poisoning",
+  "entity.forged_reactor.wind_boost": "Wind Boost",
   "effect.forged_reactor.armor_weight": "Armor Weight",
   "item.forged_reactor.mk_3_iron_armor_chestplate": "Iron Armor Chestplate",
   "item.forged_reactor.mk_8_iron_armor_leggings": "Iron Armor Leggings",
   "item.forged_reactor.mk_5_suitcase": "Iron Armor Suitcase",
+  "item.forged_reactor.wind_boost_spawn_egg": "Wind Boost Spawn Egg",
   "item.forged_reactor.mk_1_iron_armor_leggings": "Prototype Iron Armor Leggings",
   "item.forged_reactor.upgrade_template": "Upgrade Template",
   "item.forged_reactor.molten_iron_2": "Molten Iron",
