--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -4,8 +4,8 @@
   "item.forged_reactor.mk_5_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_4_iron_armor_leggings": "Iron Armor Leggings",
   "block.forged_reactor.armor_configurator": "Armor Modification Configurator",
-  "item.forged_reactor.mk_9_iron_armor_chestplate": "Iron Armor Chestplate",
   "entity.forged_reactor.mk_7_suit_pod": "Mk. 7 Suit Pod",
+  "item.forged_reactor.mk_9_iron_armor_chestplate": "Iron Armor Chestplate",
   "item.forged_reactor.mk_5_iron_armor_helmet": "Iron Armor Helmet",
   "item.forged_reactor.mk_4_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_1_iron_armor_chestplate": "Prototype Iron Armor Chestplate",
@@ -39,6 +39,7 @@
   "item.forged_reactor.mk_1_iron_armor_leggings": "Prototype Iron Armor Leggings",
   "item.forged_reactor.upgrade_template": "Upgrade Template",
   "item.forged_reactor.molten_iron_2": "Molten Iron",
+  "item.forged_reactor.molten_iron_3": "Molten Iron",
   "item.forged_reactor.molten_iron_1": "Molten Iron",
   "item.forged_reactor.mk_7_suit_pod_spawn_egg": "Mk. 7 Suit Pod Spawn Egg",
   "item.minecraft.splash_potion.effect.chlorophyll": "Splash Potion of Chlorophyll",
@@ -72,5 +73,7 @@
   "item.forged_reactor.mk_7_iron_armor_chestplate": "Iron Armor Chestplate",
   "item.forged_reactor.mk_1_iron_armor_boots": "Prototype Iron Armor Boots",
   "item.forged_reactor.mk_9_iron_armor_helmet": "Iron Armor Helmet",
-  "item.forged_reactor.mk_1_iron_armor_helmet_open_helmet": "Prototype Iron Armor Helmet"
+  "item.forged_reactor.heated_molten_iron_3": "Molten Iron",
+  "item.forged_reactor.mk_1_iron_armor_helmet_open_helmet": "Prototype Iron Armor Helmet",
+  "item.forged_reactor.heated_molten_iron_2": "Molten Iron"
 }
