--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -33,6 +33,7 @@
   "entity.forged_reactor.wind_boost": "Wind Boost",
   "effect.forged_reactor.armor_weight": "Armor Weight",
   "item.forged_reactor.mk_3_iron_armor_chestplate": "Iron Armor Chestplate",
+  "block.forged_reactor.palladium_ore": "Palladium Ore",
   "item.forged_reactor.mk_8_iron_armor_leggings": "Iron Armor Leggings",
   "item.forged_reactor.mk_5_suitcase": "Iron Armor Suitcase",
   "item.forged_reactor.wind_boost_spawn_egg": "Wind Boost Spawn Egg",
@@ -40,6 +41,7 @@
   "item.forged_reactor.upgrade_template": "Upgrade Template",
   "item.forged_reactor.molten_iron_2": "Molten Iron",
   "item.forged_reactor.molten_iron_3": "Molten Iron",
+  "item.forged_reactor.palladium_ingot": "Palladium Ingot",
   "item.forged_reactor.molten_iron_1": "Molten Iron",
   "item.forged_reactor.mk_7_suit_pod_spawn_egg": "Mk. 7 Suit Pod Spawn Egg",
   "item.minecraft.splash_potion.effect.chlorophyll": "Splash Potion of Chlorophyll",
@@ -54,11 +56,13 @@
   "item.forged_reactor.mk_7_iron_armor_leggings": "Iron Armor Leggings",
   "item.forged_reactor.mk_7_iron_armor_helmet": "Iron Armor Helmet",
   "item.forged_reactor.mk_2_iron_armor_leggings": "Prototype Accurate Flight Iron Armor Leggings",
+  "item.forged_reactor.raw_palladium": "Raw Palladium",
   "death.attack.repulsor_damage.player": "%1$s was electrocuted from a Repulsor Beam whilst trying to escape %2$s",
   "item.forged_reactor.mk_5_iron_armor_chestplate": "Iron Armor Chestplate",
   "gui.forged_reactor.armor_intake_gui.label_armor_intake": "Armor Withdrawer",
   "item.forged_reactor.mk_3_iron_armor_boots": "Iron Armor Boots",
   "item.minecraft.potion.effect.chlorophyll": "Potion of Chlorophyll",
+  "block.forged_reactor.deepslate_palladium_ore": "Deepslate Palladium Ore",
   "item.forged_reactor.mk_3_iron_armor_helmet": "Iron Armor Helmet",
   "gui.forged_reactor.mk_2_armor_hud.label_entity_data": "Entity Data:",
   "item.forged_reactor.mk_6_iron_armor_chestplate": "Iron Armor Chestplate",
