--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -4,9 +4,10 @@
   "item.forged_reactor.mk_5_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_4_iron_armor_leggings": "Iron Armor Leggings",
   "block.forged_reactor.armor_configurator": "Armor Modification Configurator",
-  "entity.forged_reactor.mk_7_suit_pod": "Mk. 7 Suit Pod",
   "item.forged_reactor.mk_9_iron_armor_chestplate": "Iron Armor Chestplate",
+  "entity.forged_reactor.mk_7_suit_pod": "Mk. 7 Suit Pod",
   "item.forged_reactor.mk_5_iron_armor_helmet": "Iron Armor Helmet",
+  "gui.forged_reactor.mk_5_armor_hud.label_0000": "00.00 --\u003e",
   "item.forged_reactor.mk_4_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_1_iron_armor_chestplate": "Prototype Iron Armor Chestplate",
   "item.forged_reactor.mk_4_iron_armor_helmet": "Iron Armor Helmet",
@@ -71,6 +72,7 @@
   "gui.forged_reactor.mk_2_armor_hud.label_proc_speed_return": "speed",
   "item.forged_reactor.mk_9_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.molten_iron": "Molten Iron",
+  "gui.forged_reactor.mk_5_armor_hud.label_entity_data": "Entity Data:",
   "item.minecraft.tipped_arrow.effect.chlorophyll": "Arrow of Chlorophyll",
   "item.forged_reactor.mk_6_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_8_iron_armor_chestplate": "Iron Armor Chestplate",
