--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -6,6 +6,7 @@
   "block.forged_reactor.armor_configurator": "Armor Modification Configurator",
   "item.forged_reactor.mk_9_iron_armor_chestplate": "Iron Armor Chestplate",
   "entity.forged_reactor.mk_7_suit_pod": "Mk. 7 Suit Pod",
+  "gui.forged_reactor.armor_configurator_gui.label_armor_configurator": "Armor Configurator",
   "item.forged_reactor.mk_5_iron_armor_helmet": "Iron Armor Helmet",
   "gui.forged_reactor.mk_5_armor_hud.label_0000": "00.00 --\u003e",
   "item.forged_reactor.mk_4_iron_armor_boots": "Iron Armor Boots",
@@ -38,6 +39,7 @@
   "item.forged_reactor.mk_8_iron_armor_leggings": "Iron Armor Leggings",
   "item.forged_reactor.mk_5_suitcase": "Iron Armor Suitcase",
   "item.forged_reactor.wind_boost_spawn_egg": "Wind Boost Spawn Egg",
+  "subtitles.repulsor_warmup": "Repulsor Warming Up...",
   "item.forged_reactor.mk_1_iron_armor_leggings": "Prototype Iron Armor Leggings",
   "item.forged_reactor.upgrade_template": "Upgrade Template",
   "item.forged_reactor.molten_iron_2": "Molten Iron",
