--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "gui.forged_reactor.armor_configurator_gui.tooltip_this_configurator_can_work_on_an": "This Configurator can work on any armor but the Iron Armor will be the only one that can be affected.",
   "item.minecraft.lingering_potion.effect.chlorophyll": "Lingering Potion of Chlorophyll",
   "item.forged_reactor.mk_9_iron_armor_leggings": "Iron Armor Leggings",
   "item.forged_reactor.mk_5_iron_armor_boots": "Iron Armor Boots",
@@ -57,15 +58,19 @@
   "item.forged_reactor.mk_1_iron_armor_helmet": "Prototype Iron Armor Helmet",
   "item.forged_reactor.flight_test_armor_chestplate": "Flight Test Prototype Chestplate",
   "item.forged_reactor.mk_7_iron_armor_leggings": "Iron Armor Leggings",
+  "gui.forged_reactor.armor_configurator_gui_no_armor_stand.label_armor_configurator1": "Armor Configurator",
   "item.forged_reactor.mk_7_iron_armor_helmet": "Iron Armor Helmet",
+  "gui.forged_reactor.armor_configurator_gui_no_armor_stand.label_only_work_if_a_armor_stand_is": "only work if a armor stand is",
   "item.forged_reactor.mk_2_iron_armor_leggings": "Prototype Accurate Flight Iron Armor Leggings",
   "item.forged_reactor.raw_palladium": "Raw Palladium",
   "death.attack.repulsor_damage.player": "%1$s was electrocuted from a Repulsor Beam whilst trying to escape %2$s",
+  "gui.forged_reactor.armor_configurator_gui.label_stark_corp": "Stark Workshop™",
   "item.forged_reactor.mk_5_iron_armor_chestplate": "Iron Armor Chestplate",
   "gui.forged_reactor.armor_intake_gui.label_armor_intake": "Armor Withdrawer",
   "item.forged_reactor.mk_3_iron_armor_boots": "Iron Armor Boots",
   "item.minecraft.potion.effect.chlorophyll": "Potion of Chlorophyll",
   "block.forged_reactor.deepslate_palladium_ore": "Deepslate Palladium Ore",
+  "gui.forged_reactor.armor_configurator_gui_no_armor_stand.label_on_top_of_the_block": "on top of the block.",
   "item.forged_reactor.mk_3_iron_armor_helmet": "Iron Armor Helmet",
   "gui.forged_reactor.mk_2_armor_hud.label_entity_data": "Entity Data:",
   "item.forged_reactor.mk_6_iron_armor_chestplate": "Iron Armor Chestplate",
@@ -78,6 +83,7 @@
   "item.minecraft.tipped_arrow.effect.chlorophyll": "Arrow of Chlorophyll",
   "item.forged_reactor.mk_6_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.mk_8_iron_armor_chestplate": "Iron Armor Chestplate",
+  "gui.forged_reactor.armor_configurator_gui_no_armor_stand.label_armor_configurator": "The Armor Configurator can",
   "item.forged_reactor.mk_7_iron_armor_chestplate": "Iron Armor Chestplate",
   "item.forged_reactor.mk_1_iron_armor_boots": "Prototype Iron Armor Boots",
   "item.forged_reactor.mk_9_iron_armor_helmet": "Iron Armor Helmet",
