--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -1,8 +1,8 @@
 {
   "gui.forged_reactor.armor_configurator_gui.tooltip_this_configurator_can_work_on_an": "This Configurator can work on any armor but the Iron Armor will be the only one that can be affected.",
   "item.minecraft.lingering_potion.effect.chlorophyll": "Lingering Potion of Chlorophyll",
-  "item.forged_reactor.mk_9_iron_armor_leggings": "Iron Armor Leggings",
   "item.forged_reactor.mk_5_iron_armor_boots": "Iron Armor Boots",
+  "item.forged_reactor.mk_9_iron_armor_leggings": "Iron Armor Leggings",
   "item.forged_reactor.mk_4_iron_armor_leggings": "Iron Armor Leggings",
   "block.forged_reactor.armor_configurator": "Armor Modification Configurator",
   "item.forged_reactor.mk_9_iron_armor_chestplate": "Iron Armor Chestplate",
@@ -58,6 +58,7 @@
   "item.forged_reactor.mk_1_iron_armor_helmet": "Prototype Iron Armor Helmet",
   "item.forged_reactor.flight_test_armor_chestplate": "Flight Test Prototype Chestplate",
   "item.forged_reactor.mk_7_iron_armor_leggings": "Iron Armor Leggings",
+  "gui.forged_reactor.armor_configurator_gui.button_configure": "Configure",
   "gui.forged_reactor.armor_configurator_gui_no_armor_stand.label_armor_configurator1": "Armor Configurator",
   "item.forged_reactor.mk_7_iron_armor_helmet": "Iron Armor Helmet",
   "gui.forged_reactor.armor_configurator_gui_no_armor_stand.label_only_work_if_a_armor_stand_is": "only work if a armor stand is",
