--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -37,7 +37,7 @@
   "item.forged_reactor.mk_6_iron_armor_chestplate": "Iron Armor Chestplate",
   "item.forged_reactor.mk_5_iron_armor_leggings": "Iron Armor Leggings",
   "gui.forged_reactor.mk_2_armor_hud.label_proc_speed_return": "speed",
-  "gui.forged_reactor.armor_configurator_gui_armor_upgrade_page.button_configure": "Configure",
+  "gui.forged_reactor.armor_configurator_gui_armor_upgrade_page.button_configure": "Upgrade",
   "entity.forged_reactor.mk_7_summoning_pod": "Mk. 7 Suit Pod",
   "item.forged_reactor.mk_9_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.molten_iron": "Molten Iron",
@@ -53,6 +53,7 @@
   "item.forged_reactor.mk_5_iron_armor_helmet": "Iron Armor Helmet",
   "gui.forged_reactor.mk_5_armor_hud.label_0000": "00.00 --\u003e",
   "item.forged_reactor.mk_1_iron_armor_chestplate": "Prototype Iron Armor Chestplate",
+  "subtitles.repulsor_shoot": "Repulsor",
   "item.forged_reactor.mk_4_iron_armor_helmet": "Iron Armor Helmet",
   "item.forged_reactor.flight_test_armor_boots": "Flight Test Prototype Boots",
   "death.attack.repulsor_damage.item": "%1$s was electrocuted by %2$s from a Repulsor Beam",
