--- a/src/main/resources/assets/forged_reactor/lang/en_us.json
+++ b/src/main/resources/assets/forged_reactor/lang/en_us.json
@@ -16,8 +16,8 @@
   "entity.forged_reactor.wind_boost": "Wind Boost",
   "effect.forged_reactor.armor_weight": "Armor Weight",
   "item.forged_reactor.mk_8_iron_armor_leggings": "Iron Armor Leggings",
-  "item.forged_reactor.mk_5_suitcase": "Iron Armor Suitcase",
   "subtitles.repulsor_warmup": "Repulsor Warming Up...",
+  "item.forged_reactor.mk_5_suitcase": "Iron Armor Suitcase",
   "item.forged_reactor.molten_iron_2": "Molten Iron",
   "item.forged_reactor.molten_iron_3": "Molten Iron",
   "item.forged_reactor.molten_iron_1": "Molten Iron",
@@ -35,14 +35,15 @@
   "item.forged_reactor.mk_3_iron_armor_boots": "Iron Armor Boots",
   "gui.forged_reactor.mk_2_armor_hud.label_entity_data": "Entity Data:",
   "item.forged_reactor.mk_6_iron_armor_chestplate": "Iron Armor Chestplate",
+  "jei.forged_reactor.mk_2_armor_information": "A reworked and a improved version of the Iron Armor, this expands on the flight systems with more complex systems and more fun flights and adventures. This also includes a HUD to look more closely to the mobs near you.",
   "item.forged_reactor.mk_5_iron_armor_leggings": "Iron Armor Leggings",
   "gui.forged_reactor.mk_2_armor_hud.label_proc_speed_return": "speed",
   "gui.forged_reactor.armor_configurator_gui_armor_upgrade_page.button_configure": "Upgrade",
   "entity.forged_reactor.mk_7_summoning_pod": "Mk. 7 Suit Pod",
   "item.forged_reactor.mk_9_iron_armor_boots": "Iron Armor Boots",
   "item.forged_reactor.molten_iron": "Molten Iron",
-  "item.forged_reactor.mk_8_iron_armor_chestplate": "Iron Armor Chestplate",
   "item.forged_reactor.mk_6_iron_armor_boots": "Iron Armor Boots",
+  "item.forged_reactor.mk_8_iron_armor_chestplate": "Iron Armor Chestplate",
   "gui.forged_reactor.armor_configurator_gui_armor_upgrade_page.button_empty": "Mods",
   "item.forged_reactor.mk_9_iron_armor_helmet": "Iron Armor Helmet",
   "item.forged_reactor.heated_molten_iron_3": "Molten Iron",
@@ -84,12 +85,14 @@
   "item.forged_reactor.mk_2_iron_armor_leggings": "Prototype Accurate Flight Iron Armor Leggings",
   "item.forged_reactor.raw_palladium": "Raw Palladium",
   "gui.forged_reactor.armor_configurator_gui.label_stark_corp": "Stark Workshop™",
+  "jei.forged_reactor.mk_3_armor_information": "With flight out of the way, now it\u0027s time to fit on some guns and weponary on this bad boy and some expansion to the HUD Interfaces",
   "item.forged_reactor.mk_5_iron_armor_chestplate": "Iron Armor Chestplate",
   "item.minecraft.potion.effect.chlorophyll": "Potion of Chlorophyll",
   "block.forged_reactor.deepslate_palladium_ore": "Deepslate Palladium Ore",
   "gui.forged_reactor.armor_configurator_gui_no_armor_stand.label_on_top_of_the_block": "on top of the block.",
   "item.forged_reactor.mk_3_iron_armor_helmet": "Iron Armor Helmet",
   "death.attack.repulsor_damage": "%1$s electrocuted from a Repulsor Beam",
+  "jei.forged_reactor.mk_1_armor_information": "A first prototype of the Iron Armor. with limited features from a flamethrower to a semi-functional flight propulsion system that can take you to the skies and is the base point for the future versions of the Iron Armor to come.",
   "gui.forged_reactor.mk_5_armor_hud.label_entity_data": "Entity Data:",
   "item.minecraft.tipped_arrow.effect.chlorophyll": "Arrow of Chlorophyll",
   "gui.forged_reactor.armor_configurator_gui_no_armor_stand.label_armor_configurator": "The Armor Configurator can",
